<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="description_title">Описание</string>
	<string name="episode_name_placeholder">Escape from the happy place</string>
	<string name="movie_name_placeholder">The Magicians</string>
	<string name="season_number_placeholder">5 Сезонов</string>
	<string name="years_placeholder">1984 - 2077</string>
	<string name="description_placeholder">Eliot is in his happy place, unaware that he is being possessed by the Monster. To have control over his body, Eliot must travel to the place that contains his greatest regret: turning down Quentin when he suggests he and Eliot should be together after their memories are restored of their life in past-Fillory, happily living together and raising a family.</string>
</resources>